# CPlusPlus-Starter

./: CMakeLists.txt  README.md  vcpkg-configuration.json  vcpkg.json
libs/: README.md
resources/: space.tga  umbriel.tga
src/: KDron.cpp  KDron.h  Makefile  OLD_CODE  algorithms.cpp  algorithms.h  baseprogram.cpp  cube.cpp  cube.h  main.cpp  matma.cpp  matma.h  plane.cpp  sphere.cpp  sphere.h  torus.cpp  window.cpp  window.h
src/primitives/: Circle.cpp  Circle.h  FancyStar.cpp  FancyStar.h  FilledCircle.cpp  FilledCircle.h  FilledStar.cpp  FilledStar.h  Shape.cpp  Shape.h  Star.cpp  Star.h  StarFrame.cpp  StarFrame.h  Triangle.cpp  Triangle.h
src/utility/: Color.h
